# Chegg

./: main.py  pyproject.toml  utils.py
data/: jokes.json
settings_files/: _global.py
